example4/kubernetes/1.microservice1_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
     app: profile-app
     version: v1
  name: microservice1-deploy-v1
  namespace : istio-demo
spec:
  selector:
    matchLabels:
      app: profile-app
      version: v1
  template:
    metadata:
      labels:
        app: profile-app
        version: v1
    spec:
      containers:
      - name: profile-app
        image: microservice1_profile_app:latest
        env :
        - name : PORT
          value : "5001"
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: client-microservice1-svc
  namespace: istio-demo
spec:
  type: LoadBalancer
  selector:
    app: profile-app
  ports:
  - port: 5001
    targetPort: 5001
