example4/kubernetes/4.microservice2_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2-deploy
  namespace : istio-demo
spec:
  selector:
    matchLabels:
      app: microservice2-deploy
  template:
    metadata:
      labels:
        app: microservice2-deploy
    spec:
      containers:
      - name: microservice2-deploy
        image: microservice2_time_app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: time-microservice2-svc
  namespace: istio-demo
spec:
  type: LoadBalancer
  selector:
    app: microservice2-deploy
  ports:
  - port: 5002
    targetPort: 5002
