example4/kubernetes/3.virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-service
  namespace: istio-demo
spec:
  hosts:
    - "*"
  gateways:
    - web-gateway
  http:
    
    - match:
        - uri:
            prefix: "/clients/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: client-microservice1-svc.istio-demo.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: client-microservice1-svc.istio-demo.svc.cluster.local
            subset: v2  
          weight: 10
    - match:
        - uri:
            prefix: "/date/"
      rewrite:
        uri: "/date/"
      route:
        - destination:
            host: time-microservice2-svc.istio-demo.svc.cluster.local
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-service
  namespace: istio-demo
spec:
  host: client-microservice1-svc.istio-demo.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
